<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoolApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="WifiDirectButton">Wifi Direct</string>
    <string name="NFCButton">NFC</string>
    <string name="GoogleMapsButton">Google Maps</string>
    <string name="BluetoothButton">Bluetooth</string>
	<string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="nfc">Hold your phone close to an NFC tag!</string>
    <string name="TurnOn">Turn on</string>
    <string name="Discoverable">Discoverable</string>
    <string name="TurnOff">Turn off</string>
</resources>
